@@ -16,7 +16,7 @@ import {
   GQLEditingContextEventPayload,
   GQLEditingContextEventSubscription,
   GQLRepresentationRenamedEventPayload,
-  Representation,
+  RepresentationMetadata,
 } from './Workbench.types';
 
 export interface WorkbenchStateSchema {
@@ -43,15 +43,15 @@ export type SchemaValue = {
 
 export interface WorkbenchContext {
   id: string;
-  representations: Representation[];
-  displayedRepresentation: Representation | null;
+  representations: RepresentationMetadata[];
+  displayedRepresentation: RepresentationMetadata | null;
   message: string | null;
 }
 
-export type HideRepresentationEvent = { type: 'HIDE_REPRESENTATION'; representation: Representation };
+export type HideRepresentationEvent = { type: 'HIDE_REPRESENTATION'; representation: RepresentationMetadata };
 export type UpdateSelectedRepresentationEvent = {
   type: 'UPDATE_SELECTED_REPRESENTATION';
-  representations: Representation[];
+  representations: RepresentationMetadata[];
 };
 
 export type ShowToastEvent = { type: 'SHOW_TOAST'; message: string };
