@@ -10,7 +10,7 @@
  * Contributors:
  *     Obeo - initial API and implementation
  *******************************************************************************/
-import { Representation } from '@eclipse-sirius/sirius-components-core';
+import { RepresentationMetadata } from '@eclipse-sirius/sirius-components-core';
 
 export interface NewRepresentationAreaState {
   message: string;
@@ -30,7 +30,7 @@ export interface NewRepresentationAreaProps {
 
 export interface GQLCreateRepresentationPayload {
   __typename: string;
-  representation: Representation;
+  representation: RepresentationMetadata;
 }
 
 export interface GQLErrorPayload extends GQLCreateRepresentationPayload {
